# SequencesFromStreams

./: CMakeLists.txt  LICENSE  README.md  custom_stream_operator.cpp  nmea.cpp  nmea.h  plain_istream_iterator.cpp  plain_istream_range.cpp  spirit_coroutine.cpp  spirit_range_facade.cpp  spirit_stream_operator.cpp
